# Prayer-Reminder

./: .gitignore  MAINTAINERS.md  README.md  TODO.md  build.sh  defs.py  i2c.py  main.py  pyproject.toml  requirements.txt
