[project]
name = "prayer-time"
version = "1.0"
description = "Basic tool to remind muslims about prayer times."
authors = [
    {name = "Ahmed Rashid",email = "ahmedsayidrashid@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
