[project]
name = "ues"
version = "0.1.0"
description = "A simple tool to remind muslims to pray"
authors = [
    {name = "Ahmed Rashid",email = "AhmedsayidRashid@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "rplcd (>=1.4.0,<2.0.0)",
    "smbus2 (>=0.5.0,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)"
]
